#151 fixed whitespace between header and content

--- a/showcase/src/main/webapp/resources/less/custom/custom.less
+++ b/showcase/src/main/webapp/resources/less/custom/custom.less
@@ -20,7 +20,7 @@ sub {
 }
 
 .content {
-    margin-top: 65px;
+    margin-top: 50px;
 }
 
 .tagsContainer .input-group .input-group-prepend,
